# bitcaster-sdk

./: .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: publish-to-test-pypi.yml  test.yml
UNKNOWN.egg-info/: SOURCES.txt
src/bitcaster_sdk/: __init__.py  api.py  client.py  exceptions.py  logging.py  sdk.py  transport.py  trigger.py  worker.py
src/bitcaster_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  runner.py  test_api.py  test_client.py  test_sdk.py
workflow/: 2  3
