[tool.poetry]
name = "bitcaster-sdk"
version = "0.1.0"
description = "Python SDK for Bitcaster. Check out GitHub to find out more."
authors = ["sax <s.apostolico@gmail.com>"]
license = "MIT"
repository = "https://github.com/bitcaster-io/bitcaster-sdk.git"
homepage = " https://github.com/bitcaster-io/bitcaster-sdk"
keywords = ['bitcaster', ]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
humanfriendly = "^9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-coverage = "*"
responses = "*"
isort = "^5.6.4"
pdbpp = "^0.10.2"
flake8 = "^3.8.4"
bump2version = "^1.0.1"

#[build-system]
#requires = ["poetry>=0.12"]
#build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=admin_extra_urls --cov-report=html --cov-config=./tests/.coveragerc"
testpaths = [
    "tests",
    "integration",
]
